# sparse-memory-encoding

./: .gitignore  Dockerfile  README.md  batch_input_requests.jsonl  check_data_batch.py  docker-compose.yml  generate_synthetic_data.py  main.py  narrative_memory_api.py  narrative_memory_demo.ipynb  process_batch_results.py  process_completed_batches.py  pyproject.toml  sae-memory-poc.py  sae_experiment_sparsity.py  sae_narrative_experiment.py  sae_narrative_l1_recon_experiment.py  sae_text_experiment.py  sae_text_finetune.py  synthetic_narrative_data.json
docs/: experiment_summary.md  sae_memory_poc_explanation.md  sae_text_finetuning_summary.md
processed_batches/: results_batch_6811d87aaba8819096c10fc203b2c61c.json  results_batch_68132475ee8481908e4db8b9c4605c0c.json
